Update website content to match vision narrative

--- a/index.html
+++ b/index.html
@@ -3,22 +3,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nexovia – Human-Centered Health Intelligence</title>
+  <title>Nexovia – A System of Care</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to Nexovia</h1>
-    <p>A system of care for women’s health, powered by data, story, and adaptive intelligence.</p>
+    <h1>Nexovia</h1>
+    <p>The system wasn’t built for us.<br>
+    Nexovia is a system of care designed to support women through every stage of life — with data, insight, and real compassion.</p>
   </header>
+
   <main>
     <section>
-      <h2>Our Mission</h2>
-      <p>Nexovia builds tools that help women understand and care for their bodies throughout all life stages.</p>
+      <h2>Why Nexovia</h2>
+      <p>
+        Most health systems were built on male data. They fail to capture the lived realities of women’s cycles, transitions, and hormonal shifts.
+        Nexovia exists to fill that structural gap — not with another tracker, but with a system designed to understand and evolve with women’s bodies.
+      </p>
     </section>
+
     <section>
-      <h2>Coming Soon</h2>
-      <p>We’re developing a prototype to capture real-time health signals and convert them into personalized insights.</p>
+      <h2>What We’re Building</h2>
+      <ul>
+        <li>📊 Biosensor inputs (sleep, HRV, temperature, mood)</li>
+        <li>🧬 Life-phase-specific insight models</li>
+        <li>🌙 Emotion-aware, adaptive tracking tools</li>
+        <li>🔐 A private, supportive space to reflect and connect</li>
+      </ul>
+      <p>We’re starting with perimenopause — and building toward a continuum of care from puberty to longevity.</p>
+    </section>
+
+    <section>
+      <h2>Current Prototype</h2>
+      <p>
+        We’re in early prototyping mode: logging biosignals, testing interpretation methods, and validating the experience with real-world data.
+        Follow development in our <a href="https://github.com/NexoviaNet/nexovia-prototype" target="_blank">prototype repository</a>.
+      </p>
+    </section>
+
+    <section>
+      <h2>Founder</h2>
+      <p>
+        Nexovia is built by <a href="https://github.com/noturlluvia" target="_blank">@noturlluvia</a> — a systems thinker with experience in data science, engineering, and lived truth. This project is personal, technical, and overdue.
+      </p>
     </section>
   </main>
 </body>
