Sync landing page with README vision and narrative

--- a/index.html
+++ b/index.html
@@ -1,52 +1,102 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Nexovia – A System of Care</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      margin: 2rem auto;
+      max-width: 800px;
+      line-height: 1.6;
+      padding: 0 1rem;
+      background-color: #fafafa;
+      color: #333;
+    }
+    h1, h2 {
+      color: #004b6b;
+    }
+    a {
+      color: #0069b3;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    section {
+      margin-bottom: 2rem;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Nexovia</h1>
-    <p>The system wasn’t built for us.<br>
-    Nexovia is a system of care designed to support women through every stage of life — with data, insight, and real compassion.</p>
-  </header>
+  <h1>Nexovia – A System of Care</h1>
+  <p><a href="https://nexovianet.github.io">Visit the live site</a> &nbsp;|&nbsp;
+     <a href="https://github.com/NexoviaNet/nexovia-prototype">View the prototype repo</a></p>
 
-  <main>
-    <section>
-      <h2>Why Nexovia</h2>
-      <p>
-        Most health systems were built on male data. They fail to capture the lived realities of women’s cycles, transitions, and hormonal shifts.
-        Nexovia exists to fill that structural gap — not with another tracker, but with a system designed to understand and evolve with women’s bodies.
-      </p>
-    </section>
+  <section>
+    <h2>Why Nexovia</h2>
+    <p>The system wasn’t built for us. That’s the truth too many women already know — and the reason Nexovia exists.</p>
+    <p>Today’s health trackers, advice, and apps often fail women quietly. They’re built on male-centric data, push generic goals, and vanish when real life gets complex. Confusion, fatigue, and self-doubt aren’t weakness — they’re signals that the system was never designed to understand us.</p>
+  </section>
 
-    <section>
-      <h2>What We’re Building</h2>
-      <ul>
-        <li>📊 Biosensor inputs (sleep, HRV, temperature, mood)</li>
-        <li>🧬 Life-phase-specific insight models</li>
-        <li>🌙 Emotion-aware, adaptive tracking tools</li>
-        <li>🔐 A private, supportive space to reflect and connect</li>
-      </ul>
-      <p>We’re starting with perimenopause — and building toward a continuum of care from puberty to longevity.</p>
-    </section>
+  <section>
+    <h2>What We’re Building</h2>
+    <p><strong>Nexovia</strong> isn’t just a product. It’s a <strong>personalized, adaptive system of care</strong> — designed to support women through every stage of life.</p>
+    <p>We’re starting with one critical phase (e.g., perimenopause) and expanding to build a full continuum:</p>
+    <ul>
+      <li>Puberty</li>
+      <li>Hormonal cycles</li>
+      <li>Fertility and postpartum</li>
+      <li>Perimenopause</li>
+      <li>Longevity</li>
+    </ul>
+    <p>With Nexovia, you’ll be able to:</p>
+    <ul>
+      <li>Understand your body with clarity</li>
+      <li>Make decisions with confidence</li>
+      <li>Navigate transitions with meaningful support</li>
+    </ul>
+  </section>
 
-    <section>
-      <h2>Current Prototype</h2>
-      <p>
-        We’re in early prototyping mode: logging biosignals, testing interpretation methods, and validating the experience with real-world data.
-        Follow development in our <a href="https://github.com/NexoviaNet/nexovia-prototype" target="_blank">prototype repository</a>.
-      </p>
-    </section>
+  <section>
+    <h2>How It Works</h2>
+    <p>Our approach blends <strong>precision and compassion</strong>:</p>
+    <ul>
+      <li>📊 Biosensor inputs (sleep, HRV, inflammation, mood)</li>
+      <li>🧬 Life-phase-specific insight models</li>
+      <li>🌙 Emotion-aware, adaptive tracking tools</li>
+      <li>🔐 A private, supportive space to reflect and connect</li>
+    </ul>
+    <p>Because <strong>data alone doesn’t create health</strong>. Insight, timing, and connection do.</p>
+  </section>
 
-    <section>
-      <h2>Founder</h2>
-      <p>
-        Nexovia is built by <a href="https://github.com/noturlluvia" target="_blank">@noturlluvia</a> — a systems thinker with experience in data science, engineering, and lived truth. This project is personal, technical, and overdue.
-      </p>
-    </section>
-  </main>
+  <section>
+    <h2>Current Prototype</h2>
+    <p>This early-stage prototype is being built and tested by a solo founder — using:</p>
+    <ul>
+      <li>Arduino-based ECG + temperature sensors</li>
+      <li>Python-based data pipelines</li>
+      <li>Personalized experimentation to model use cases from the inside out</li>
+    </ul>
+    <p>🧪 <a href="https://github.com/NexoviaNet/nexovia-prototype">Explore the prototype repo</a></p>
+  </section>
+
+  <section>
+    <h2>Founder</h2>
+    <p><a href="https://github.com/noturlluvia">@noturlluvia</a> is a systems thinker, data scientist, and product designer with lived experience of the problem. Nexovia is not a research paper — it’s a lived necessity.</p>
+  </section>
+
+  <section>
+    <h2>What’s Next</h2>
+    <ul>
+      <li>A validated MVP for a key life stage</li>
+      <li>A private pilot with early users</li>
+      <li>Data-backed insight loops that power the next version</li>
+    </ul>
+    <p>Nexovia isn’t just a tracker. It’s the system too many women needed — and never had. Until now.</p>
+  </section>
 </body>
 </html>
